# gnome-software

./: .gitlab-ci.yml  meson.build  meson_options.txt
data/: meson.build  org.gnome.software.akmods-helper.policy.in.in
data/assets/: meson.build  org.gnome.Software.akmods.xml
lib/: gs-akmods-private.c  gs-akmods-private.h  gs-icon-downloader.c  gs-plugin.c  meson.build
plugins/: meson.build
plugins/akmods/: gs-akmods-helper.c  gs-plugin-akmods.c  gs-plugin-akmods.h  meson.build
plugins/core/: gs-plugin-appstream.c
plugins/flatpak/: gs-flatpak.c
po/: POTFILES.in
src/: gnome-software.gresource.xml  gs-akmods-dialog.c  gs-akmods-dialog.h  gs-akmods-dialog.ui  gs-app-version-history-dialog.c  gs-app-version-history-row.c  gs-app-version-history-row.ui  gs-application.c  gs-details-page.c  gs-shell.c  gs-shell.h  gs-update-monitor.c  meson.build  style.css
